--- a/README.Rmd
+++ b/README.Rmd
@@ -256,8 +256,7 @@ Some of our candidate gRNAs target repeat elements and likely target a large num
 ```{r}
 filteredGuideSet <- crisprDesign::removeRepeats(mmp7GuideSet,
                                                 gr.repeats=repeats)
-filteredGuideSet <- crisprDesign::filterSpacers(filteredGuideSet,
-                                                criteria=list(hasSNP=FALSE))
+filteredGuideSet <- filteredGuideSet[!filteredGuideSet$hasSNP]
 plotGuideSet(filteredGuideSet,
              geneModel=mmp7GeneModel,
              targetGene="MMP7",
